--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "fxa-js-client": "0.1.30",
     "hawk": "6.0.0",
     "hkdf": "0.0.2",
-    "jwcrypto": "0.5.2",
     "p-promise": "0.5.0",
     "request": "2.74.0",
+    "browserid-crypto": "0.8.0",
     "xmlhttprequest": "git://github.com/zaach/node-XMLHttpRequest.git#onerror"
   }
 }
