--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "author": "Zach Carter",
   "license": "APL 2.0",
   "dependencies": {
-    "browserid-crypto": "0.8.0",
-    "fxa-js-client": "0.1.30",
+    "browserid-crypto": "github:garvankeeley/browserid-crypto",
     "hawk": "6.0.0",
     "hkdf": "0.0.2",
     "p-promise": "0.5.0",
